crates/plotgram-render/src/snapshots/plotgram_render__tests__minimal_svg_snapshot.snap
---
source: crates/plotgram-render/src/lib.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" width="200" height="200">
<defs>
<marker id="arrow-head" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto-start-reverse"><polygon points="0 0, 10 3.5, 0 7" fill="#0F766E"/></marker>
</defs>
<rect width="200" height="200" fill="#F7F7F8"/>
<path d="M 50.0 50.0 L 50.0 110.0" fill="none" stroke="#9C9CA6" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round" stroke-opacity="1.00" marker-end="url(#arrow-head)"/>
<rect x="10" y="10" width="80" height="40" rx="10" fill="#FFFFFF" stroke="#C9C9C9" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/>
<rect x="10" y="110" width="80" height="40" rx="10" fill="#FFFFFF" stroke="#C9C9C9" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/>
</svg>
